fixed link for dark mode

--- a/assets/sass/noesya-hugo/_style.sass
+++ b/assets/sass/noesya-hugo/_style.sass
@@ -383,9 +383,11 @@ h1 a:hover
         background: black
         color: white
     body,
-    a, .link,
     .block-testimonials blockquote p
         color: white
+    a, 
+    .link
+        @include link(white)
     header#document-header nav .logo 
         color: white
         img
